--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/auth-helpers-nextjs": "^0.6.1",
     "@supabase/auth-helpers-react": "^0.3.1",
     "@supabase/auth-ui-react": "^0.4.2",
+    "@supabase/auth-ui-shared": "^0.1.6",
     "next": "^12.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -24,6 +25,7 @@
     "encoding": "^0.1.13",
     "eslint": "7.32.0",
     "next-transpile-modules": "9.0.0",
+    "prettier": "^2.8.8",
     "rimraf": "^3.0.2",
     "typescript": "^4.5.3"
   },
